Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429NET.CS


        private static class BTI429_32
        {
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BCDGetData@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDGetData(UInt32 msg, UInt16 msb, UInt16 lsb);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BCDGetMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDGetMant(UInt32 msg, UInt16 sigdig);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BCDGetSign@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_BCDGetSign(UInt32 msg);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BCDGetSSM@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_BCDGetSSM(UInt32 msg);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BCDGetVal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_BCDGetVal(ref string buf, UInt32 msg, UInt16 sigdig, ref string resolstr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BCDPutData@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDPutData(UInt32 msg, UInt32 value, UInt16 msb, UInt16 lsb);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BCDPutMant@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDPutMant(UInt32 msg, UInt32 value, UInt16 sigdig, UInt16 sign);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BCDPutSign@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDPutSign(UInt32 msg, UInt16 sign);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BCDPutSSM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDPutSSM(UInt32 msg, UInt16 value);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BCDPutVal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BCDPutVal(ref string buf, UInt32 msg, UInt16 sigdig, ref string resolstr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BNRGetData@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRGetData(UInt32 msg, UInt16 msb, UInt16 lsb);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BNRGetMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRGetMant(UInt32 msg, UInt16 sigbit);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BNRGetSign@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_BNRGetSign(UInt32 msg);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BNRGetSSM@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_BNRGetSSM(UInt32 msg);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BNRGetVal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_BNRGetVal(ref string buf, UInt32 msg, UInt16 sigbit, ref string resolstr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BNRPutData@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRPutData(UInt32 msg, UInt32 value, UInt16 msb, UInt16 lsb);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BNRPutMant@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRPutMant(UInt32 msg, UInt32 value, UInt16 sigbit, UInt16 twos);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BNRPutSign@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRPutSign(UInt32 msg, UInt16 twos);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BNRPutSSM@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRPutSSM(UInt32 msg, UInt16 value);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_BNRPutVal@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_BNRPutVal(ref string buf, UInt32 msg, UInt16 sigbit, ref string resolstr);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChClear(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChConfig(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChGetCount@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_ChGetCount(ref Int32 rcvcount, ref Int32 xmtcount, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChGetInfo@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ChGetInfo(UInt16 infotype, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChIs429@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChIs429(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChIsRcv@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChIsRcv(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChIsXmt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChIsXmt(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChPause@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_ChPause(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChPauseCheck@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChPauseCheck(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChResume@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_ChResume(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChStart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChStart(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChStop@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChStop(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChSyncDefine@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ChTriggerDefine@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ChTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FilterClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_FilterClear(UInt32 basevaladdr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FilterDefault@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FilterDefault(UInt32 configval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FilterRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FilterRd(Int32 labelval, Int32 sdival, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FilterSet@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FilterSet(UInt32 configval, Int32 labelval, Int32 sdimask, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FilterWr@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_FilterWr(UInt32 msgaddr, Int32 labelval, Int32 sdival, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FldGetData@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FldGetData(UInt32 msgval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FldGetLabel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_FldGetLabel(UInt32 msgval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FldGetParity@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_FldGetParity(UInt32 msgval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FldGetSDI@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_FldGetSDI(UInt32 msgval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FldGetValue@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FldGetValue(UInt32 msgval, UInt16 startbit, UInt16 endbit);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FldPutData@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FldPutData(UInt32 msgval, UInt32 data);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FldPutLabel@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FldPutLabel(UInt32 msgval, UInt16 label);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FldPutSDI@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FldPutSDI(UInt32 msgval, UInt16 sdi);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_FldPutValue@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_FldPutValue(UInt32 msgval, UInt32 dataval, UInt16 startbit, UInt16 endbit);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListAsyncCreate@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ListAsyncCreate(UInt32 listconfigval, Int32 count, Int32 channum, IntPtr handleval);
